--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,12 @@ authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">3.10,<4.0"
+bs4 = "^0.0.2"
+progress = "^1.6"
+click = "^8.1.7"
+pyfs = {git = "https://github.com/NicholasSynovic/python-fs-utils"}
+lxml = "^5.2.2"
 
 
 [build-system]
