--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ progress = "^1.6"
 click = "^8.1.7"
 pyfs = {git = "https://github.com/NicholasSynovic/python-fs-utils"}
 lxml = "^5.2.2"
+pandas = "^2.2.2"
 
 
 [build-system]
